--- a/index.html
+++ b/index.html
@@ -10,35 +10,38 @@
   </head>
   <body>
     <!-- 1st row-->
-    <div class="row">
-     <div class="small-12 columns">
-      <!-- Tab labels -->
-            <dl class="tabs" data-tab>
-        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
-        <dd><a href="#panel2-2">Tab 2</a></dd>
-        <dd><a href="#panel2-3">Tab 3</a></dd>
-      </dl>
+ <div class="row">   
+<div class="off-canvas-wrap">
+  <div class="inner-wrap">
+    <nav class="tab-bar">
+      <section class="left-small">
+        <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+      </section>
 
-      <!-- Tab Content -->
-      <div class="tabs-content">
-        <div class="content active" id="panel2-1">
-          <ul class="button-group [radius round]">
-        <li><a href="#" class="button">|| Pause</a></li>
-        <li><a href="#" class="button">|> Play</a></li>
+      <section class="middle tab-bar-section">
+        <h1 class="title">p2-dvr-app</h1>
+      </section>
+
+    </nav>
+
+    <aside class="left-off-canvas-menu">
+      <ul class="off-canvas-list">
+        <li><label>Foundation</label></li>
+        <li><a href="#">The Psychohistorians</a></li>
+        ...
       </ul>
-        </div>
-        <div class="content" id="panel2-2">
-          <p>Second panel content goes here...</p>
-        </div>
-        <div class="content" id="panel2-3">
-          <p>Third panel content goes here...</p>
-        </div>
-      </div>
+    </aside>
 
+    <section class="main-section">
+      <!-- content goes here -->
+    </section>
 
-     </div>
+  <a class="exit-off-canvas"></a>
 
-    </div><!--end 1st row-->
+  </div>
+</div>
+</div> <!-- end of 1st row -->
+
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
