--- a/index.html
+++ b/index.html
@@ -61,12 +61,33 @@
     </div>
   </dd>
   <dd>
+    <!-- recorded shows slider -->
     <a href="#panel2">Recorded Shows</a>
     <div id="panel2" class="content">
-      
+      <ul class="example-orbit" data-orbit>
+  <li>
+    <img src="img/hell.jpg" alt="slide 1" />
+    <div class="orbit-caption">
+      Caption One.
+    </div>
+  </li>
+  <li>
+    <img src="img/board.jpg" alt="slide 2" />
+    <div class="orbit-caption">
+      Caption Two.
+    </div>
+  </li>
+  <li>
+    <img src="img/mad.jpg" alt="slide 3" />
+    <div class="orbit-caption">
+      Caption Three.
+    </div>
+  </li>
+</ul>
     </div>
   </dd>
 </dl>
+
   </div> <!--end of column  -->
  </div> <!--end of row  -->
 
