added comments and changed panel name

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+
   <!-- top buttons -->
   <div class="row topbuttons">
    <div class="small-12 columns">
@@ -21,6 +22,7 @@
      </div>
    </div>
  </div>
+
    <!-- accordian -->
   <div class="row">
     <div class="small-12 columns">
@@ -52,7 +54,7 @@
   <dd>
 
 <!-- recorded show library slider -->
-    <a href="#panel2">Accordion 2</a>
+    <a href="#panel2">Library</a>
     <div id="panel2" class="content">
   <ul class="example-orbit" data-orbit>
       <li>
@@ -84,6 +86,7 @@
   </div> <!--end of column  -->
  </div> <!--end of row  -->
 
+<!-- vol buttons -->
  <div class="row btmbuttons">
    <div class="small-12 columns">
      <div class="button-bar">
@@ -94,6 +97,8 @@
      </div>
    </div>
  </div>
+
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
