changed panel 1 name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="small-12 columns">
       <dl class="accordion" data-accordion>
   <dd>
-    <a href="#panel1">Accordion 1</a>
+    <a href="#panel1">Main Controls</a>
     <div id="panel1" class="content active">
       <div class="row">
         <div class="small-12 columns">
