--- a/index.html
+++ b/index.html
@@ -11,94 +11,57 @@
   </head>
   <body>
 
-  <!-- top buttons -->
-  <div class="row topbuttons">
-   <div class="small-12 columns">
-     <div class="button-bar">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button alert">REC</a></li>
-          <li><a href="#" class="large button success">PWR</a></li>
-        </ul>
-     </div>
-   </div>
- </div>
+<div class="row">
+  <div class="columns grid_12">
+    <div class="off-canvas-wrap">
+  <div class="inner-wrap">
+    <nav class="tab-bar">
+      <section class="left-small">
+        <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+      </section>
 
-   <!-- accordian -->
-  <div class="row">
-    <div class="small-12 columns">
-      <dl class="accordion" data-accordion>
-  <dd>
-    <a href="#panel1">Main Controls</a>
-    <div id="panel1" class="content active">
-      <div class="row">
-        <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Chan -</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Chan +</a></li>
-        </ul>
-      </div> <!-- end column -->
-      <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Stop</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Play/Pause</a></li>
-        </ul>
-      </div> <!-- end column -->
-       <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Rewind</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Fast Forward</a></li>
-        </ul>     
-      </div>
-    </div>
-  </dd>
-  <dd>
+      <section class="middle tab-bar-section">
+        <h1 class="title">Foundation</h1>
+      </section>
+    </nav>
+
+    <aside class="left-off-canvas-menu">
+      <ul class="off-canvas-list">
+        <li><label>Foundation</label></li>
+        <li><a href="#">The Psychohistorians</a></li>
+        <li><a href="#">The Psychohistorians</a></li>
+        <li><a href="#">The Psychohistorians</a></li>
+        <li><a href="#">The Psychohistorians</a></li>
+        ...
+      </ul>
+    </aside>
+
+      </ul>
+    </aside>
+
+    <section class="main-section">
+      <!-- content goes here -->
+    </section>
+
+  <a class="exit-off-canvas"></a>
+
+  </div>
+</div>
+
+  <!-- top buttons -->
+  
+
+
+
 
 <!-- recorded show library slider -->
-    <a href="#panel2">Library</a>
-    <div id="panel2" class="content">
-  <ul class="example-orbit" data-orbit>
-      <li>
-        <img src="img/hell.jpg" alt="slide 1" />
-         <div class="orbit-caption">
-                    Hell on Wheels
-         </div>
-            </li>
-            <li>
-        <img src="img/board.jpg" alt="slide 2" />
-          <div class="orbit-caption">
-            Boardwalk Empire
-            </div>
-            </li>
-            <li>
-          <img src="img/mad.jpg" alt="slide 3" />
-            <div class="orbit-caption">
-            Mad Men
-         </div>
-      </li>
-  </ul>
-    </div>
-  </dd>
-  <dd>
     
-  </dd>
-</dl>
-
-  </div> <!--end of column  -->
- </div> <!--end of row  -->
+ 
+  </div>
+</div>    
 
 <!-- vol buttons -->
- <div class="row btmbuttons">
-   <div class="small-12 columns">
-     <div class="button-bar">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button success">VOL -</a></li>
-          <li><a href="#" class="large button success">VOL +</a></li>
-        </ul>
-     </div>
-   </div>
- </div>
-
-
+ 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
