--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div id="panel1" class="content active">
       <div class="row">
         <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Chan -</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Chan +</a></li>
+        <ul class="button-group [radius round]">
+          <li><a href="#" class="button secondary">Chan</a></li>
+          <li><a href="#" class="button secondary">Chan</a></li>
         </ul>
       </div> <!-- end column -->
       <div class="small-12 columns">
@@ -74,7 +74,7 @@
     </div>
   </dd>
  <dd>
-    <a href="#panel3">User</a>
+    <a href="#panel3">Users</a>
     <div id="panel3" class="content">
       
     </div>
@@ -84,17 +84,7 @@
   </div> <!--end of column  -->
  </div> <!--end of row  -->
 
-<!-- vol buttons -->
- <div class="row btmbuttons">
-   <div class="small-12 columns">
-     <div class="button-bar">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button success">VOL -</a></li>
-          <li><a href="#" class="large button success">VOL +</a></li>
-        </ul>
-     </div>
-   </div>
- </div>
+
 
 
  
