--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- top buttons -->
   <div class="row topbuttons">
     <div class="column grid_12">
-      <a href="#" class="button  radius rec">rec</a>
-      <a href="#" class="button  radius pwr">pwr</a>
+      <a href="#" class="button  radius rec"><img class="icons"src="img/record.svg"></a>
+      <a href="#" class="button  radius pwr"><img class="icons"src="img/power.svg"></a>
     </div>
  </div>
 
@@ -27,22 +27,24 @@
     <div id="panel1" class="content active">
       <div class="row">
         <div class="small-12 columns">
+
         <ul class="button-group [radius round]">
-          <li><a href="#" class="button secondary">Chan</a></li>
-          <li><a href="#" class="button secondary">Chan</a></li>
+          <h3>chan</h3>
+          <li><a href="#" class="button secondary"><img class="icons"src="img/minus.svg"></a></li>
+          <li><a href="#" class="button secondary"><img class="icons"src="img/plus.svg"></a></li>
         </ul>
       </div> <!-- end column -->
       <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Stop</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Play/Pause</a></li>
+        <ul class="button-group [radius round]">
+          <li><a href="#" class="button secondary"><img class="icons"src="img/stop.svg"></a></li>
+          <li><a href="#" class="button secondary"><img class="icons"src="img/play.svg"></a></li>
         </ul>
       </div> <!-- end column -->
        <div class="small-12 columns">
-        <ul class="button-group radius round">
-          <li><a href="#" class="large button [alert success secondary] ">Rewind</a></li>
-          <li><a href="#" class="large button [alert success secondary] ">Fast Forward</a></li>
-        </ul>     
+        <ul class="button-group [radius round]">
+          <li><a href="#" class="button secondary"><img class="icons"src="img/rewind.svg"></a></li>
+          <li><a href="#" class="button secondary"><img class="icons"src="img/fast-forward.svg"></a></li>
+        </ul>  
       </div>
     </div>
   </dd>
