added user profiles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <label for="right-label" class="right inline"><img src="img/magnifying-glass.svg"></label>
                 </div>
                 <div class="small-9 columns">
-                  <input type="text" id="right-label" placeholder="Inline Text Input">
+                  <input type="text" id="right-label" placeholder="Search">
                 </div>
               </div>
             </div>
@@ -100,6 +100,12 @@
  <dd>
     <a href="#panel3">Users</a>
     <div id="panel3" class="content">
+       <ul> 
+         <li><a href="#"><img class="profile" src="img/john.svg" alt="profile" />John</a></li>
+         <li><a href="#"><img class="profile" src="img/danielle.svg" alt="profile" />Danielle</a></li> 
+         <li><a href="#"><img class="profile" src="img/ezra.svg" alt="profile" />Ezra</a></li> 
+         <li><a href="#"><img class="profile" src="img/evelyn.svg" alt="profile" />Evelyn</a></li>   
+       </ul>
       
     </div>
   </dd>
