changed slider pictures

--- a/index.html
+++ b/index.html
@@ -98,42 +98,42 @@
     <h3>networks</h3>
        <ul class="example-orbit" data-orbit>
             <li>
-              <img src="img/hell.jpg" alt="slide 1" />
+              <img src="img/comedycentral.png" alt="comedy central" />
                <div class="orbit-caption">
-                          Hell on Wheels
+                Comedy Central
                </div>
                   </li>
                   <li>
-              <img src="img/board.jpg" alt="slide 2" />
+              <img src="img/hbo.png" alt="hbo" />
                 <div class="orbit-caption">
-                  Boardwalk Empire
+                  HBO
                   </div>
                   </li>
                   <li>
-                <img src="img/mad.jpg" alt="slide 3" />
+                <img src="img/amc.png" alt="amc" />
                   <div class="orbit-caption">
-                  Mad Men
+                  AMC
                </div>
             </li>
         </ul>
       <h3>popular movies</h3>
         <ul class="example-orbit" data-orbit>
             <li>
-              <img src="img/hell.jpg" alt="slide 1" />
+              <img src="img/django.jpg" alt="django" />
                <div class="orbit-caption">
-                          Hell on Wheels
+                  Django
                </div>
                   </li>
                   <li>
-              <img src="img/board.jpg" alt="slide 2" />
+              <img src="img/gatsby.jpg" alt="gatsby" />
                 <div class="orbit-caption">
-                  Boardwalk Empire
+                  The Great Gatsby
                   </div>
                   </li>
                   <li>
-                <img src="img/mad.jpg" alt="slide 3" />
+                <img src="img/basterds.jpg" alt="Inglorious Basterds" />
                   <div class="orbit-caption">
-                  Mad Men
+                  Inglorious Basterds
                </div>
             </li>
         </ul>
