added modal with profiles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+
+  <!-- User Welcome -->
+  <div id="welcome">
+    <a href="#" data-reveal-id="BasicModal" data-reveal>Welcome John!</a> 
+  </div>
+  <div id="BasicModal" class="reveal-modal" data-reveal>
+        <p>Change User Profile</p>
+          <ul> 
+           <li><a href="#"><img class="profile" src="img/john.svg" alt="profile" />John</a></li>
+           <li><a href="#"><img class="profile" src="img/danielle.svg" alt="profile" />Danielle</a></li> 
+           <li><a href="#"><img class="profile" src="img/ezra.svg" alt="profile" />Ezra</a></li> 
+           <li><a href="#"><img class="profile" src="img/evelyn.svg" alt="profile" />Evelyn</a></li>   
+         </ul>
+        <a class="close-reveal-modal">&#215;</a>
+  </div>
+
     <!-- top buttons -->
   <div class="row">
     <div class="column grid_12">
