added icon next to profile welcome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- User Welcome -->
   <div id="welcome">
-    <a href="#" data-reveal-id="BasicModal" data-reveal>Welcome John!</a> 
+    <a href="#" data-reveal-id="BasicModal" data-reveal><img class="current-profile" src="img/john.svg" alt="profile" />Welcome John!</a> 
   </div>
   <div id="BasicModal" class="reveal-modal" data-reveal>
         <p>Change User Profile</p>
