styled search bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-   <!-- accordian -->
+   <!-- beginning of accordian -->
   <div class="row">
     <div class="small-12 columns">
       <dl class="accordion" data-accordion>
@@ -65,18 +65,21 @@
   </dd>
 
 
+<!-- library panel -->
   <dd>
     <a href="#panel2">Library</a>
       <div id="panel2" class="content">
-         <form>
+
+<!-- search bar -->
+        <form>
           <div class="row">
-            <div class="small-8">
+            <div class="small-12">
               <div id="searchbar" class="row">
-                <div class="small-3 columns">
-                  <label for="right-label" class="right inline" data-tooltip class="has-tip" title="Search your recorded shows"><a href="#"><img src="img/magnifying-glass.svg"></a></label>
-                </div>
-                <div class="small-9 columns">
+                <div class="small-8 columns">
                   <input type="text" id="right-label" placeholder="Search" data-tooltip class="has-tip" title="Search your recorded shows">
+                </div>
+                <div class="small-2 columns">
+                  <label for="right-label" class="right inline"><a href="#"><img src="img/magnifying-glass.svg"></a></label>
                 </div>
               </div>
             </div>
@@ -106,8 +109,8 @@
         </ul>
       </div>
   </dd>
-
-<!-- browse -->
+<!-- end library panel -->
+<!-- browse panel-->
 <dd>
     <a href="#panel3">Browse</a>
     <div id="panel3" class="content">
@@ -177,8 +180,8 @@
       
     </div>
   </dd>
-
-<!-- panel 4 -->
+<!-- end browse panel -->
+<!-- profile panel-->
 
  <dd>
     <a href="#panel4">Users</a>
@@ -193,9 +196,9 @@
     </div>
   </dd>
 </dl>
-
-  </div> <!--end of column  -->
- </div> <!--end of row  -->
+<!-- end profile panel -->
+  </div> <!--end of column  (accordian) -->
+ </div> <!--end of row (accordian) -->
 
 
 
