--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
         <ul class="button-group [radius round]">
           <li><a href="#" id="maincontrol" class="maincontrol button tiny secondary"><img class="icons"src="img/rewind.svg"></a></li>
           <li><a href="#" id="maincontrol" class="maincontrol button tiny secondary"><img class="icons"src="img/fast-forward.svg"></a></li>
-        </ul>  
+        </ul> 
+
+        <ul class="button-group [radius round]">
+          <li><a href="#" id="maincontrol" class="maincontrol button tiny secondary"><img class="icons"src="img/volume-down.svg"></a></li>
+          <li><a href="#" id="maincontrol" class="maincontrol button tiny secondary"><img class="icons"src="img/volume.svg"></a></li>
+        </ul>   
      
     </div>
   </dd>
